[#239] Unify settings for all projects
* clean-up according to settings