@@ -25,6 +25,7 @@ import org.eclipse.team.svn.core.discovery.model.DiscoveryCategory;
  */
 public class DiscoveryCategoryComparator implements Comparator<DiscoveryCategory> {
 
+	@Override
 	public int compare(DiscoveryCategory o1, DiscoveryCategory o2) {
 		if (o1 == o2) {
 			return 0;
@@ -36,7 +37,7 @@ public class DiscoveryCategoryComparator implements Comparator<DiscoveryCategory
 			// don't have to worry about format, since they were already validated
 			// note that higher relevance appears first, thus the reverse order of
 			// the comparison.
-			i = new Integer(r2).compareTo(new Integer(r1));
+			i = Integer.valueOf(r2).compareTo(Integer.valueOf(r1));
 		} else if (r1 == null) {
 			return 1;
 		} else {
